fixed button spacing in cards

--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,16 @@ header h1 {
   padding-bottom: 2rem;
   box-shadow: 0 4px 6px hsla(0, 0%, 0%, 0.2);
   overflow: hidden;
+
+  display: flex;
+  flex-direction: column;
+  justify-items: flex-start;
+  align-items: center;
+}
+
+.card .btn {
+  margin-top: auto;
+  justify-self: flex-end;
 }
 
 .card p {
@@ -65,6 +75,7 @@ header h1 {
 
 img {
   width: 100%;
+  display: block;
   transition: all 0.3s ease-in-out;
 }
 
@@ -80,6 +91,7 @@ img:hover {
   color: white;
   text-decoration: none;
   box-shadow: 0 4px 6px hsla(0, 0%, 0%, 0.2);
+  width: 90%;
 }
 
 .btn:hover {
